[project]
name = "panel-mermaid"
version = "0.2.0"
description = "A project providing a Mermaid JS widget for use with HoloViz Panel."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["panel>=1.5.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "jedi-language-server;sys_platform == 'linux'",
    "mypy",
    "panel",
    "pytest",
    "ruff",
    "watchfiles",
]
tests = [
  "pytest"
]
examples = [
  "panel-modal",
  "pygments",
]
